@startuml
!theme plain
skinparam backgroundColor transparent
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName "Helvetica"
skinparam classAttributeIconSize 0
skinparam ArrowColor #33475b
skinparam class {
  BackgroundColor #FBFCFE
  BorderColor #33475b
  ArrowColor #33475b
}

class User {
  +id : UUID
  +email : String
}

enum UserTaskStatus {
  Pending
  InProgress
  Completed
}
enum UserTaskPriority {
  Low
  Medium
  High
}

class UserTask {
  +id : UUID
  -userId : UUID
  -parentTaskId : UUID
  +status : UserTaskStatus
  +priority : UserTaskPriority
  +dueDate : DateTime
  +reminderDate : DateTime
  +notified : Boolean
  +isFavorite : Boolean
  +archived : Boolean
  +displayOrder : Integer
}
class UserTaskContent {
  +id : UUID
  +title : String
  +description : String
  +language : Language
}
class UserTaskComment {
  +id : UUID
  +comment : String
  -userId : UUID
}
class UserTaskAttachment {
  +id : UUID
  +file : String
}

User "1" --> "0..*" UserTask : owns
UserTask "1" --> "0..*" UserTask : "sub-tasks (cascade)"
UserTask "1" --> "1..*" UserTaskContent : "content (i18n)"
UserTask "1" --> "0..*" UserTaskComment : comments
UserTask "1" --> "0..*" UserTaskAttachment : attachments
User "1" --> "0..*" UserTaskComment : authored

UserTask ..> UserTaskStatus
UserTask ..> UserTaskPriority
@enduml
